# Xorb

./: .coveragerc  .dependabot.yml  .env  .env.autonomous  .env.example  .env.production.secure  .env.template  .gitattributes  .gitignore  .gitleaks.toml  .goreleaser.yml  .pre-commit-config.yaml  .yamllint.yaml  ACCEPTANCE.md  ADR_COMPLIANCE_FINAL_REPORT.json  ADVANCED_FEATURES_COMPLETE.md  API_DOCUMENTATION.md  AUDIT_REPORT.md  AUDIT_REPORT_20250811.md  AUDIT_SUMMARY.md  AUTONOMOUS_INIT.md  AUTONOMOUS_OPERATIONS_COMPLETE.md  AUTONOMOUS_WORKERS.md  BATCH_2_COMPLETION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEOWNERS  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CONTRACT_COMPATIBILITY_FINAL_SUMMARY.md  CONTRACT_COMPATIBILITY_IMPLEMENTATION_SUMMARY.md  CONTRACT_COMPATIBILITY_TEST_RESULTS.md  DEPENDENCY_CONSOLIDATION_REPORT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HARDENING_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  (+317 more)
services/api/: Dockerfile  alembic.ini  gateway.py  main.py  pyproject.toml  requirements.txt  simple_dockerfile  simple_main.py
services/api/.secrets/: prod.env
services/api/app/: deps.py  main.py  security.py
services/api/app/middleware/: feature_flags.py  rate_limiter.py  usage_tracking.py
services/api/app/routers/: auth.py  compliance.py  discovery.py  embeddings.py  gamification.py  knowledge.py
services/api/migrations/: env.py
services/api/migrations/versions/: 004_gamification.py  005_hnsw_index.py
services/scanner-rs/: Cargo.toml
services/scanner-rs/scanner-bin/: Cargo.toml
services/scanner-rs/scanner-bin/src/: main.rs
services/scanner-rs/scanner-core/: Cargo.toml  build.rs
services/scanner-rs/scanner-core/src/: bus.rs  config.rs  lib.rs  tracing.rs
services/scanner-rs/scanner-fp/: Cargo.toml
services/scanner-rs/scanner-tools/: Cargo.toml
services/scanner-rs/scanner-tools/src/: lib.rs  nikto.rs  nmap.rs  nuclei.rs  sslscan.rs
services/xorb-core/api/: CLEAN_ARCHITECTURE_REFACTORING_SUMMARY.md  Dockerfile  README.md  db_management.py  dependencies.py  gateway.py  pyproject.toml  requirements.txt
services/xorb-core/api/app/: __init__.py  container.py  dependencies.py  enhanced_main.py  main.py
services/xorb-core/api/middleware/: rate_limiting.py
services/xorb-core/api/migrations/: env.py
services/xorb-core/api/routes/: compliance.py
services/xorb-core/api/tests/: test_auth.py  test_performance.py  test_storage.py
src/api/: .gitleaks.toml  .pre-commit-config.yaml  CLEAN_ARCHITECTURE_REFACTORING_SUMMARY.md  Dockerfile  Dockerfile.production  README.md  db_management.py  dependencies.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_clean_architecture.py
src/api/app/: container.py  deps.py  enhanced_container.py  enhanced_main.py  main.py  security.py
src/api/app/auth/: dependencies.py  models.py  rbac_dependencies.py  routes.py
src/api/app/config/: production_config.py
src/api/app/controllers/: __init__.py  advanced_orchestration_controller.py  auth_controller.py  base.py  discovery_controller.py
src/api/app/core/: adaptive_rate_limiter.py  advanced_monitoring.py  advanced_threat_detection.py  cache.py  config.py  config_old.py  database.py  enhanced_jwt.py  error_handling.py  logging.py  metrics.py  production_config.py  quantum_safe_security.py  rate_limit_observability.py  rate_limit_policies.py  secure_config.py  secure_jwt.py  secure_logging.py  secure_tenant_context.py  security.py  security_analytics_engine.py  security_monitoring.py  vault_client.py  zero_trust_engine.py
src/api/app/domain/: __init__.py  entities.py  exceptions.py  repositories.py  tenant_entities.py  value_objects.py
src/api/app/infrastructure/: __init__.py  advanced_database_manager.py  advanced_networking.py  advanced_redis_orchestrator.py  advanced_vector_search.py  ai_response_orchestrator.py  cache.py  database.py  database_models.py  database_repositories.py  database_schema.py  enhanced_database_repositories.py  enterprise_service_discovery.py  ml_model_manager.py  observability.py  performance.py  performance_monitor.py  production_container.py  production_database_manager.py  production_database_repositories.py  production_monitoring.py  production_observability.py  production_repositories.py  production_repository_implementations.py  rbac_models.py  redis_client.py  redis_compatibility.py  redis_manager.py  repositories.py  secure_query_builder.py  secure_repositories.py
src/api/app/integrations/: __init__.py  base_connector.py  connector_factory.py  enterprise_connector.py  enterprise_connectors.py  firewall_connector.py  identity_connector.py  siem_connector.py  soar_connector.py
src/api/app/jobs/: models.py  queue.py  worker.py
src/api/app/marketplace/: api_marketplace.py
src/api/app/middleware/: __init__.py  adaptive_rate_limiting_middleware.py  advanced_rate_limiter.py  audit_logging.py  error_handling.py  feature_flags.py  input_validation.py  performance_middleware.py  production_middleware.py  production_security.py  rate_limiter.py  rate_limiting.py  rbac_middleware.py  request_id.py  secure_cors.py  secure_tenant_middleware.py  tenant_context.py  usage_tracking.py  zero_trust_middleware.py
src/api/app/observability/: __init__.py  error_budgets.py  instrumentation.py  sli_metrics.py
src/api/app/rate_limit/: __init__.py  limiter.py  middleware.py  policies.py
src/api/app/repositories/: evidence_repository.py
src/api/app/routers/: advanced_ai_security_platform.py  advanced_networking.py  advanced_orchestration.py  advanced_ptaas_router.py  advanced_redis_management.py  advanced_security_operations.py  advanced_security_platform.py  agents.py  auth.py  health.py  (+45 more)
src/api/controllers/: sso_controller.py
src/api/middleware/: rate_limiting.py
src/api/migrations/: env.py
src/api/routers/: sso.py
src/api/services/: auth_service.py  sso_service.py
src/api/tests/: test_integration.py  test_jobs.py  test_multitenancy.py  test_production_security.py  test_redis_manager.py  test_security_enhancements.py
(+2491 files in other folders)
