
[tool.poetry]
name = "xorb"
version = "0.1.0"
description = "XORB Security Platform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
xorb_core = { path = "packages/xorb_core", develop = true }
httpx = ">=0.25.0"
aiohttp = ">=3.8.0"
requests = ">=2.31.0"
asyncio-mqtt = ">=0.11.0"
asyncpg = ">=0.28.0"
redis = ">=5.0.0"
aioredis = ">=2.0.0"
SQLAlchemy = ">=2.0.0"
alembic = ">=1.12.0"
psycopg2-binary = ">=2.9.0"
playwright = ">=1.37.0"
selenium = ">=4.13.0"
pandas = ">=2.1.0"
numpy = ">=1.25.0"
scipy = ">=1.11.0"
cryptography = ">=41.0.0"
bcrypt = ">=4.0.0"
PyJWT = ">=2.8.0"
passlib = ">=1.7.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.4.0"
pydantic-settings = ">=2.0.0"
prometheus-client = ">=0.17.0"
psutil = ">=5.9.0"
rich = ">=13.5.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.23.0"
marshmallow = ">=3.20.0"
python-dateutil = ">=2.8.0"
pytz = ">=2023.3"
structlog = ">=23.1.0"
colorama = ">=0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "C90"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "packages/xorb_core",
    "services/api",
    "services/worker",
]
