[workspace]
members = [
    "scanner-core",
    "scanner-tools", 
    "scanner-fp",
    "scanner-bin"
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.25"
opentelemetry = "0.24"
opentelemetry-jaeger = "0.23"

# gRPC and protobuf
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# NATS JetStream for bus
async-nats = { version = "0.36", features = ["jetstream"] }

# Redis for idempotency
redis = { version = "0.26", features = ["tokio-comp"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.14"

# HTTP client for tool execution
reqwest = { version = "0.12", features = ["json"] }

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# CSV parsing
csv = "1.3"

# Regular expressions
regex = "1.10"

# Observability
prometheus = "0.13"
once_cell = "1.19"

# Network scanning
trust-dns-resolver = "0.23"

# Log utilities
log = "0.4"
env_logger = "0.10"

# HTTP server for metrics
hyper = { version = "0.14", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XORB Platform Team"]
license = "Apache-2.0"