[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xorb-api"
version = "2.0.0"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "temporalio>=1.0.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "structlog>=23.1.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "alembic>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.7",
    "pgvector>=0.1.8",
]
