[package]
name = "scanner-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
tonic.workspace = true
prost.workspace = true
async-nats.workspace = true
redis.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
prometheus.workspace = true
once_cell.workspace = true
log.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio-test = "0.4"
