[package]
name = "scanner-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
csv.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"